--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@tanstack/react-query": "^5.66.9",
     "@wagmi/core": "^2.16.5",
     "axios": "^1.9.0",
+    "chart.js": "2.9.3",
+    "chartjs-plugin-zoom": "^0.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.5.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "2.10.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
@@ -42,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/chart.js": "2.9.32",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
