--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.1.2",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@reduxjs/toolkit": "^2.6.0",
@@ -21,9 +25,12 @@
     "axios": "^1.9.0",
     "chart.js": "2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
+    "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "decimal.js": "^10.5.0",
+    "dropdown-menu": "^0.1.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
