--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.66.9",
+    "@types/d3": "^7.4.3",
     "@wagmi/core": "^2.16.5",
     "axios": "^1.9.0",
     "chart.js": "2.9.3",
@@ -31,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
     "decimal.js": "^10.5.0",
     "dropdown-menu": "^0.1.1",
     "framer-motion": "^12.12.1",
